# finadv

./: .coderabbit.yaml  .cursorrules  .dockerignore  .gitignore  AGENT.md  Caddyfile  DESIGN.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_initial.py
migrations/: env.py
migrations/versions/: 40903987e71d_init_migration.py  4367c4b82c55_income_debt.py
scripts/: setup-github-project.sh
src/: __init__.py  main.py
src/ext/: __init__.py  db.py  settings.py
src/resources/: __init__.py
src/resources/_base/: __init__.py  models.py  repository.py
src/resources/_base/templates/: error.html  index.html  layout.html
src/resources/_base/tests/: __init__.py  test_models.py  test_repository.py
src/resources/debts/: models.py
src/resources/incomes/: models.py  repository.py
src/resources/incomes/tests/: __init__.py  test_repository.py
src/static/: main.css  output.css
tests/: conftest.py  test_alembic.py  test_db.py  test_income_debt_migration.py  test_main.py
