[project]
name = "finadv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.128.7",
    "fasthx>=3.1.0",
    "htmy>=0.10.2",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "python-ulid>=3.1.0",
    "sqlmodel>=0.0.32",
]

[dependency-groups]
dev = [
    "ignr>=2.2",
    "pytailwindcss>=0.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
    "ty>=0.0.16",
]
